# pda1-mbads

./: .gitignore  CLAUDE.md  COLAB.md  README.md  pyproject.toml  syllabus.md
homework/: practice_midterm.md  s01_variables_homework.ipynb  s03_data_structures_1_homework.ipynb  s04_data_structures_2_homework.ipynb  s05_strings_homework.ipynb  s07_conditionals_homework.ipynb  s08_loops_homework.ipynb  s10_functions_homework.ipynb  s13_pandas_intro_homework.ipynb  s15_pandas_filtering_homework.ipynb  s17_pandas_combining_homework.ipynb
notebooks/: names.txt  s01_variables_and_types.ipynb  s02_practice.ipynb  s03_data_structures_lists_tuples.ipynb  s04_data_structures_dicts_sets.ipynb  s05_strings.ipynb  s06_practice.ipynb  s07_conditionals.ipynb  s08_loops.ipynb  s09_practice_comprehensions.ipynb  s10_functions.ipynb  s11_practice.ipynb  s13_pandas_intro_reading.ipynb  s14_practice_pandas_basics.ipynb  s15_pandas_filtering_aggregation.ipynb  s16_practice_data_manipulation.ipynb  s17_pandas_combining_quality.ipynb  s18_practice_cleaning_merging.ipynb  s19_final_practice_100_exercises.ipynb  sample.txt
